tests/should_fail/opaque.stderr
error: Cannot make `"x::priv_symbol"` transparent in `"x::bad"` as it would call a less-visible item.
  --> opaque.rs:16:9
   |
16 |         priv_symbol()
   |         ^^^^^^^^^^^^^

error: aborting due to 1 previous error

